welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: not found: value estBiscuit
if (estBiscuit()) 
    ^Program:2: error: value avance is not a member of Unit
prendBiscuit() avance() ;
               ^