welcome.lessons.welcome.loopfor.LoopFor.scala.code
if (estBiscuit()) 
prendBiscuit() avance() ;
else avance ()

   

